--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -80,6 +80,7 @@
     <string name="shuffle_stats">आंकड़ों के अनुसार</string>
     <string name="clear_all_coming">उपस्थिति साफ़ करें</string>
     <string name="action_send_statistics">आंकड़े भेजें</string>
+    <string name="action_send">भेजें</string>
     <string name="action_analysis">विश्लेषण</string>
     <string name="action_share">साझा करें</string>
     <string name="action_enter_results">परिणाम दर्ज करें</string>
@@ -166,6 +167,19 @@
     <string name="setting_summary_show_grades">खिलाड़ी रेटिंग प्रदर्शित करें</string>
     <string name="setting_title_auto_sync_games">ऑटो सिंक</string>
     <string name="setting_summary_auto_sync_games">नए खेलों को क्लाउड के साथ स्वचालित रूप से सिंक करें</string>
+    <string name="setting_title_team_count">टीमों की संख्या</string>
+    <string name="setting_summary_team_count">2 या 3 टीमें चुनें</string>
+    <string name="setting_title_auto_reset_coming">उपस्थित खिलाड़ियों को साफ़ करें</string>
+    <string name="setting_summary_auto_reset_coming">खेल परिणाम सहेजने के बाद उपस्थित खिलाड़ियों को स्वचालित रूप से साफ़ करें</string>
+
+    <!--    3-Team Feature-->
+    <string name="dialog_team_count_title">कितनी टीमें?</string>
+    <string name="dialog_team_count_message">अपने खिलाड़ियों को कैसे विभाजित करें चुनें</string>
+    <string name="dialog_option_2_teams">2 टीमें</string>
+    <string name="dialog_option_3_teams">3 टीमें</string>
+    <string name="hint_drag_drop_3teams">टीमों के बीच खिलाड़ियों को खींचने के लिए लंबे समय तक दबाएं</string>
+    <string name="make_3teams_title">टीम विभाजन (3 टीमें)</string>
+    <string name="team_3_public_stats">टीम 3 आंकड़े</string>
 
     <!--    Messages-->
     <string name="parentheses">(%1$d)</string>
@@ -289,8 +303,40 @@
     <!--    Statistics Tab Charts-->
     <string name="stats_tab_stats">आंकड़े</string>
     <string name="stats_tab_charts">चार्ट</string>
+    <string name="stats_tab_chemistry">केमिस्ट्री</string>
     <string name="stats_charts_tab_seniority">अनुभव</string>
     <string name="stats_charts_tab_success">सफलता</string>
+    <string name="stats_charts_tab_grade_vs_winrate">कैलिब्रेशन</string>
+
+    <!-- Chemistry container sub-tabs -->
+    <string name="chemistry_tab_pairs">जोड़े</string>
+    <string name="chemistry_tab_triplets">त्रिक</string>
+    <string name="chemistry_tab_form">फॉर्म</string>
+    <string name="chemistry_toggle_all">सभी समय</string>
+    <string name="chemistry_toggle_recent">हाल का</string>
+
+    <!-- Triplets -->
+    <string name="pairs_title">शक्तिशाली जोड़े</string>
+    <string name="pairs_description">2 खिलाड़ियों के संयोजन जीत के अनुसार क्रमबद्ध।\nउनके खेल देखने के लिए एक पंक्ति पर टैप करें।</string>
+    <string name="pairs_no_data">पर्याप्त डेटा नहीं। जोड़ों को कम से कम %1$d बार एक साथ दिखाने के लिए अधिक खेल खेलें।</string>
+    <string name="pairs_col_pair">जोड़ा</string>
+    <string name="pairs_col_games">खेल</string>
+    <string name="pairs_col_winrate">जीत %</string>
+    <string name="triplets_title">शक्तिशाली त्रिक</string>
+    <string name="triplets_description">3 खिलाड़ियों के संयोजन जीत दर के अनुसार क्रमबद्ध।\nउनके खेल देखने के लिए एक पंक्ति पर टैप करें।</string>
+    <string name="triplets_no_data">पर्याप्त डेटा नहीं। त्रिक को कम से कम %1$d बार एक साथ दिखाने के लिए अधिक खेल खेलें।</string>
+
+    <!-- Form grid -->
+    <string name="form_grid_title">हाल का फॉर्म</string>
+    <string name="form_grid_description">प्रति खिलाड़ी पिछले %1$d खेल।\nखिलाड़ी विवरण देखने के लिए एक पंक्ति पर टैप करें।</string>
+    <string name="form_grid_no_data">अभी तक कोई खेल डेटा नहीं।</string>
+    <string name="form_section_recent">हाल की उपस्थिति</string>
+    <string name="form_section_others">अन्य</string>
+
+    <!-- Grade vs Win Rate -->
+    <string name="grade_winrate_title">जीत दर बनाम अनुभव</string>
+    <string name="grade_winrate_description">प्रत्येक बिंदु एक खिलाड़ी है। खेले गए खेल / जीत दर।\nविवरण देखने के लिए एक बिंदु पर टैप करें।</string>
+    <string name="grade_winrate_no_data">पर्याप्त डेटा नहीं। कैलिब्रेशन देखने के लिए कम से कम %1$d खेल खेलें।</string>
 
     <!--    Player Experience Distribution Chart-->
     <string name="stats_seniority_chart_title">खिलाड़ी अनुभव वितरण</string>
